Release 3.0.0-BETA2 - ???

   BREAKING CHANGES

   * Updated PST parser to use standard Message metadata keys and improved
     handling of embedded files (TIKA-4248).

Release 3.0.0-BETA - 12/01/2023

   BREAKING CHANGES

   * Require Java 11 (TIKA-4128).

   * The boilerpipe handler has been moved to the tika-handler-boiler-pipe
     package (TIKA-4138).

   * We've migrated HTML parsing to the JSoup parser instead of TagSoup. If
     you have a custom configuration on the HTMLParser, you'll need to change
     that to o.a.t.p.html.JSoupParser (TIKA-1599).

   * Removed xerces2 as a dependency (TIKA-4135).

   * tika-core now has a scope of "provided" in most non-app modules (TIKA-4191).

   * Tika will look for "custom-mimetypes.xml" directly on the classpath, NOT
     under "/org/apache/tika/mime/". (TIKA-4147).

   * Return media type "text/javascript" instead of "application/javascript"
     to follow RFC-9239. (TIKA-4119).

   Other Changes/Updates

   * Improve detection of sqlite3-based file formats (TIKA-4187).

   * Upgrade PDFBox to 3.0.1 (TIKA-3347)
   
   * Deprecated AbstractParser for removal in 4.x (TIKA-4132).

   * Fix bug in DateUtils that stripped timezone information from
     incoming Calendar objects (TIKA-4126).

   * The InputStreamDigester now calculates stream length (TIKA-4016).

Release 2.9.0 - 8/23/2023

   * With user configuration, the PDFParser can now throw an EncryptedDocumentException
     for Microsoft IRM PDF containers with encrypted payloads. Separately,
     the PDFParser now throws an EncryptedDocumentException instead of an IOException
     if the security handler cannot be found (TIKA-4082).

   * Fix bug that led to duplicate extraction of macros from some OLE2 containers (TIKA-4116).

   * Parse iframe's srcdoc as an embedded file (TIKA-3109).

   * Add detection of warc.gz as a specialization of gz and parse as if a standard WARC (TIKA-4048).
