@@ -5,6 +5,10 @@ Release 3.0.0-BETA2 - ???
    * Updated PST parser to use standard Message metadata keys and improved
      handling of embedded files (TIKA-4248).
 
+   Other Changes
+
+   * Add optional PST parser based on libpst/readpst (TIKA-4250).
+
 Release 3.0.0-BETA - 12/01/2023
 
    BREAKING CHANGES
